--- a/Makefile.Windows64
+++ b/Makefile.Windows64
@@ -1,8 +1,8 @@
 BIN = mandelbrot
 CC = gcc
-CFLAGS = -DNDEBUG -Ofast -fomit-frame-pointer -Wall -pedantic -march=znver1
+CFLAGS = -DNDEBUG -Ofast -fomit-frame-pointer -Wall -pedantic 
 LIBS = -Wall -lopengl32 -lglfw3 -lgdi32 -lglew32 -lglu32 -lm
-SRC = main.c GLutils.c
+SRC = src/main.c src/GLutils.c
 
 all:
 	${CC} ${CFLAGS} -o ${BIN} ${SRC} ${LIBS}
